WebCore/rendering/RenderView.h
@@ -163,6 +163,7 @@ public:
 #if USE(ACCELERATED_COMPOSITING)
     RenderLayerCompositor* compositor();
     bool usesCompositing() const;
+    void compositingStateChanged(bool nowComposited);
 #endif
 
 protected:
